# reader

./: .gitignore  Cargo.toml  TODO.txt  install.sh  pyproject.toml
resources/: japanese.txt
src/: application_state.rs  file.rs  history.rs  main.rs  statistics.rs  word.rs
src/app/: delegate.rs  empty_view.rs  eof_view.rs  files_view.rs  mod.rs  reader_view.rs  right_aligned_label.rs  statistics_view.rs  test_view.rs  token_view.rs
src/article/: line.rs  mod.rs  position.rs
src/compressor/: mod.rs  word.rs
src/data_types/: file.rs  mod.rs  pos.rs  token.rs
src/database/: article.rs  common.rs  create.rs  database_error.rs  delete.rs  file.rs  file_state.rs  filter.rs  history.rs  history_token.rs  insert.rs  mod.rs  reader_state.rs  select.rs  state.rs  statistics.rs  table.rs  token.rs  token_info.rs  token_state.rs  update.rs  word.rs
src/database/file/: current_file.rs  line.rs  mod.rs  word.rs
src/database/history/: current_history.rs  mod.rs
src/database/history_token/: mod.rs
src/database/reader_state/: mod.rs
src/database/state/: current_state.rs  mod.rs  operation.rs
src/database/statistics_state/: mod.rs  token_info.rs
src/database/token/: mod.rs  pos.rs
src/database/tokenizer/: converter.rs  mod.rs
src/reader/: mod.rs
src/state/: mod.rs  operation.rs
src/token/: mod.rs  pos.rs
src/tokenizer/: converter.rs  mod.rs  pos.rs
