[package]
name = "reader_rs"
version = "0.1.0"
authors = ["Odaka Ui <31593320+odakaui@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
druid = "0.7"
lindera = "0.8.0"
ron = "*"
rusqlite = "0.25"
serde = "1"
